# mm

./: LICENSE  README.md  export.sh
libmedia/media/: CMakeLists.txt  fmt.c  fmt.h  fmt_in.c  fmt_in.h  jointor.h  media_buffer.c  media_buffer.h  sortcache.c  sortcache.h
libmedia/media/backend/: drawer.c  drawer.h  render_jointor.c  render_jointor.h
libmedia/media/codec/: codec.c  codec.h  codec_hook.h  mpu.c  mpu.h  omx.c
libmedia/media/codec/aac/: dec.c  enc.c
libmedia/media/codec/apple/: dec.c  enc.c
libmedia/media/codec/ffmpeg/: ffmpeg.h
libmedia/media/codec/h264/: dec.c  enc.c  h264.h  java.c  mp4.c  mp4.h  nalu.c  nalu.h
libmedia/media/codec/h265/: dec.c  enc.c  x265_config.h
libmedia/media/codec/omx/: dec.cpp  enc.cpp  media_source.h  (+8 more)
libmedia/media/comn/: backtrace.c  backtrace.h  base64.c  base64.h  bits.h  enter.h  fdctxpool.h  fdset.c  fdset.h  fdset_in.h  fnv1.c  fraction.h  fset_win.c  khash.h  list_head.h  lkf.h  lock.h  logmsg.h  luaconf.h  mbuf.c  mbuf.h  mem.c  mem.h  my_buffer.h  my_errno.h  my_handle.h  mydef.h  myjni.c  myjni.h  now.c  now.h  rbtree2.c  rbtree2.h  rc4.h  semaphore2.h  shuffle.c  tcpsvr.h  thread_clean.c  utils.c  utils.h
libmedia/media/ffmpeg/: ffmpeg.sh
libmedia/media/frontend/: file_jointor.c  file_jointor.h
libmedia/media/mmapi/: captofile.c  captofile.h  mfio.c  mfio.h  playback.c  playback.h  writer.c  writer.h
libmedia/media/muxer/: muxer.c  muxer.h
libmedia/media/platform/: area.h  audio.h  audioctl.h  gl.h  pts.c  pts.h  shader.c  shader.h  smooth.h  stage.c  stage.h  video.h  videoctl.h  win.c  win.h
(+456 files in other folders)
